# gpt-neox

./: Dockerfile  Dockerfile.development  docker-compose-development.yml  docker-compose-dockerhub.yml  docker-compose.yml  pyproject.toml  wandb.yml
configs/docker/: docker-default.yml  openwebtext2.yml  pile-deduped.yml  pythia-14M-performance.yml  pythia-14M.yml  pythia-70M-performance.yml  pythia-70M.yml  pythia-base.yml
configs/pythia/: 14M-min-pythia.yml
megatron/model/: init_functions.py  transformer.py
megatron/neox_arguments/: neox_args.py
requirements/: container-after-installs.txt  frozen-container.txt  requirements-onebitadam.txt
tools/: corpora.py
